--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -25,6 +25,7 @@
 \usepackage{wrapfig}
 \usepackage{caption}
 \usepackage{mathpazo}
+\usepackage{booktabs,tabularx}
 
 \setlength{\parindent}{4em}
 \setlength{\parskip}{1em}
