--- a/informe/conclusion.tex
+++ b/informe/conclusion.tex
@@ -4,7 +4,7 @@ UP y los métodos ágiles (como Scrum, que usamos para el primer TP) son iterati
 
 UP se centra en la arquitectura, y facilita su refinamiento progresivo.
 
-En el primer TP teníamos tres artefactos que guíaban el desarrollo de software: un Product Backlog, un Sprint Backlog y un Burndown Chart. Un backlog es simplemente una lista de prioridad de cosas a hacer. El Burndown Chart sirve para graficar el progreso durante la iteración actual. Estas tres herramientas son lo que se usa para planificar y hacer el seguimiento del proyecto en Scrum.
+En el primer TP teníamos tres artefactos que guiaban el desarrollo de software: un Product Backlog, un Sprint Backlog y un Burndown Chart. Un backlog es simplemente una lista de prioridad de cosas a hacer. El Burndown Chart sirve para graficar el progreso durante la iteracción actual. Estas tres herramientas son lo que se usa para planificar y hacer el seguimiento del proyecto en Scrum.
 
 UP, por otro lado, contiene una larga lista de documentos y herramientas para planificar el proyecto. Por ejemplo, una planificación de una iteración de UP es muchísimo más detallada que para Scrum, dado que incluye riesgos, tareas, recursos asignados a tareas y dependencias entre tareas.
 
@@ -19,9 +19,9 @@ UP, por otro lado, contiene una larga lista de documentos y herramientas para pl
 
 Programming in the large y programming in the small describen dos aproximaciones diferentes al diseño y desarrollo de software. 
 
-Programming in the large involucra en general productos de software desarrolloados por grupos a lo largo de extensas cantidades de tiempo. Con programming in the large, los diseñadores hacen hincapié en particionar el trabajo en modulos con interacciones bien definidas. Esto requiere una cuidadosa planificación además de una cuidadosa documentación. Programming in the large en general se refiere a diseñar el sistema desde un alto nivel, donde solo importa el estado de los módulos y sus interacciones, y no su implementación real.
+Programming in the large involucra en general productos de software desarrollados por grupos a lo largo de extensas cantidades de tiempo. Con programming in the large, los diseñadores hacen hincapié en particionar el trabajo en modulos con interacciones bien definidas. Esto requiere una cuidadosa planificación además de una cuidadosa documentación. Programming in the large en general se refiere a diseñar el sistema desde un alto nivel, donde solo importa el estado de los módulos y sus interacciones, y no su implementación real.
 
-Debido a todas estas características, el programming in the large es importante planificar a largo plazo, tener en cuenta riesgos y darle mucha importancia a la arquitectura del software. Por esta razón, programming in the large suele estar asociado con UP.
+Debido a todas estas características, en programming in the large es importante planificar a largo plazo, tener en cuenta riesgos y darle mucha importancia a la arquitectura del software. Es debido a esto que en general se utiliza una metodología como UP. 
 
 Por otro lado, programming in the small describe la actividad de escribir pequeños programas, es decir, cuyo desarrollo toma poco tiempo. En general programming in the small es llevado a cabo por personas individuales o pequeños equipos.
 
@@ -29,8 +29,8 @@ Debido a que en general se busca velocidad en el desarrollo de estas pequeñas p
 
 \subsection{Conclusiones generales}
 
-Como conclusión general, podemos decir que los dos trabajos prácticos nos permitieron apreciar dos m\'etodos de desarrollo y planificación de desarrollo de software muy distintos, que aplican a situaciones distintas. 
+Como conclusión general, podemos decir que los dos trabajos prácticos nos permitieron apreciar dos m\'etodos de desarrollo y planificación de software muy distintos, que aplican a situaciones distintas. 
 
 UP permite llevar a cabo proyectos enormes, que se extenderán durante mucho tiempo. Por eso se requiere planificar todo al detalle, pensar en los riesgos, diseñar la arquitectura del software puntillosamente, de tal manera que la gran inversión de tiempo y dinero no sea en vano.
 
-Por otro lado, las metodologías ágiles que vimos para el primer trabajo práctico, permiten desarrollar de forma muy rápida softwares pequeños. Es muy buena para desarrollar prototipos o borradores de softare (por ejemplo, Most Viable Products), y luego incrementarlos de a poco. Sin embargo, los equipos tienen que ser más pequeños que para UP (que por su alto nivel de planeamiento soporta equipos muchísimo más grandes).
+Por otro lado, las metodologías ágiles que vimos para el primer trabajo práctico, permiten desarrollar de forma muy rápida softwares pequeños. Es muy buena para desarrollar prototipos o borradores de software (por ejemplo, Most Viable Products) para luego incrementarlos de a poco, y en general proyectos donde no vale la pena pagar un alto overhead de planificación. Sin embargo, los equipos tienen que ser más pequeños que para UP (que por su alto nivel de planeamiento soporta equipos muchísimo más grandes).
