--- a/informe/arquitectura.tex
+++ b/informe/arquitectura.tex
@@ -15,13 +15,13 @@
   \centering
   \includegraphics[width=\textwidth]{diagramas/ReciBarFiesta.png}
   \caption{\normalfont Vista de Nivel 1 de ReciBarFiesta del lado del servidor. (Hacer zoom para visualizar correctamente)}
-\end{figure} 
+\end{figure}
 
 \subsubsection{Manejador de Eventos}
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=\textwidth]{diagramas/ManejadorDeEventos.png}
+  \includegraphics[angle=90,height=18cm]{diagramas/ManejadorDeEventos.png}
   \caption{\normalfont Vista del Manejador de Eventos. (Hacer zoom para visualizar correctamente)}
 \end{figure} 
 
